remove one last mention of tailus

--- a/src/components/BrandLogo.astro
+++ b/src/components/BrandLogo.astro
@@ -6,8 +6,8 @@ export interface Props {
 const { class: className = "text-2xl" } = Astro.props;
 ---
 
-<a href="/" aria-label="tailus logo">
-  <span class={className} style={{ fontFamily: "Jaro, sans-serif" }}
-    >packaged</span
-  >
+<a href="/" aria-label="packaged logo">
+  <span class={className} style={{ fontFamily: "Jaro, sans-serif" }}>
+    packaged
+  </span>
 </a>
