--- a/src/components/AppHeader.astro
+++ b/src/components/AppHeader.astro
@@ -1,7 +1,7 @@
 ---
 import BrandLogo from "./BrandLogo.astro";
 import Container from "./Container.astro";
-import { button, ghostButton, outlinedButton } from "@tailus/themer-button";
+import { button } from "@tailus/themer-button";
 import { cn } from "@lib/utils";
 import Frame from "./Frame.astro";
 
