Add links for arm64 linux builds

--- a/src/components/AppExample.astro
+++ b/src/components/AppExample.astro
@@ -60,6 +60,14 @@ const { imagePath, title, packageName } = Astro.props;
           x86 64bit
         </a>
       </p>
+      <p>
+        <a
+          class="text-primary-600 dark:text-primary-400"
+          href={`https://github.com/tusharsadhwani/packaged/releases/latest/download/${packageName}-aarch64-linux.bin`}
+        >
+          ARM 64bit
+        </a>
+      </p>
     </div>
   </div>
 </Container>
