Use tarball URLs

--- a/src/components/AppExample.astro
+++ b/src/components/AppExample.astro
@@ -36,7 +36,7 @@ const { imagePath, title, packageName } = Astro.props;
       <p>
         <a
           class="text-primary-600 dark:text-primary-400"
-          href={`https://github.com/tusharsadhwani/packaged/releases/latest/download/${packageName}-aarch64-darwin.bin`}
+          href={`https://github.com/tusharsadhwani/packaged/releases/latest/download/${packageName}-aarch64-darwin.tar.gz`}
         >
           Apple silicon
         </a>
@@ -44,7 +44,7 @@ const { imagePath, title, packageName } = Astro.props;
       <p>
         <a
           class="text-primary-600 dark:text-primary-400"
-          href={`https://github.com/tusharsadhwani/packaged/releases/latest/download/${packageName}-x86_64-darwin.bin`}
+          href={`https://github.com/tusharsadhwani/packaged/releases/latest/download/${packageName}-x86_64-darwin.tar.gz`}
         >
           Intel 64bit
         </a>
@@ -55,7 +55,7 @@ const { imagePath, title, packageName } = Astro.props;
       <p>
         <a
           class="text-primary-600 dark:text-primary-400"
-          href={`https://github.com/tusharsadhwani/packaged/releases/latest/download/${packageName}-x86_64-linux.bin`}
+          href={`https://github.com/tusharsadhwani/packaged/releases/latest/download/${packageName}-x86_64-linux.tar.gz`}
         >
           x86 64bit
         </a>
@@ -63,7 +63,7 @@ const { imagePath, title, packageName } = Astro.props;
       <p>
         <a
           class="text-primary-600 dark:text-primary-400"
-          href={`https://github.com/tusharsadhwani/packaged/releases/latest/download/${packageName}-aarch64-linux.bin`}
+          href={`https://github.com/tusharsadhwani/packaged/releases/latest/download/${packageName}-aarch64-linux.tar.gz`}
         >
           ARM 64bit
         </a>
