--- a/src/components/AppHeader.astro
+++ b/src/components/AppHeader.astro
@@ -21,33 +21,12 @@ const links = [
   <nav class="absolute z-50 w-full lg:bg-transparent dark:lg:bg-transparent">
     <Container>
       <div
-        class="relative flex flex-wrap items-center justify-between gap-6 py-3 md:gap-0 md:py-4 lg:py-8"
+        class="relative flex items-center justify-between gap-6 py-6 md:gap-0 lg:py-8"
       >
         <div
-          class="relative z-20 flex w-full items-center justify-between md:px-0 lg:w-max"
+          class="relative z-20 flex items-center justify-between md:px-0 lg:w-max"
         >
           <BrandLogo />
-
-          <div class="relative flex max-h-10 items-center lg:hidden">
-            <button
-              aria-label="humburger"
-              id="hamburger"
-              class="relative -mr-6 p-6"
-            >
-              <div
-                aria-hidden="true"
-                id="line"
-                class="m-auto h-0.5 w-5 rounded bg-sky-900 transition duration-300 dark:bg-gray-300"
-              >
-              </div>
-              <div
-                aria-hidden="true"
-                id="line2"
-                class="m-auto mt-2 h-0.5 w-5 rounded bg-sky-900 transition duration-300 dark:bg-gray-300"
-              >
-              </div>
-            </button>
-          </div>
         </div>
         <div
           id="navLayer"
@@ -55,11 +34,8 @@ const links = [
           class="fixed inset-0 z-10 h-screen w-screen origin-bottom scale-y-0 bg-white/70 backdrop-blur-2xl transition duration-500 dark:bg-gray-900/70 lg:hidden"
         >
         </div>
-        <div
-          id="navlinks"
-          class="hidden flex-wrap lg:flex gap-6 items-center w-full lg:w-fit"
-        >
-          <div class="lg:fixed lg:inset-x-0 lg:size-fit lg:m-auto">
+        <div id="navlinks" class="flex gap-6 items-center w-fit">
+          <div class="hidden lg:fixed lg:inset-x-0 lg:size-fit lg:m-auto">
             <Frame>
               <div class="relative w-full text-gray-600 dark:text-gray-300">
                 <ul
@@ -81,16 +57,12 @@ const links = [
               </div>
             </Frame>
           </div>
-          <div
-            class="w-full my-6 border-t dark:border-[--ui-dark-border-color] pt-6 lg:mt-0 flex gap-2 lg:my-0 lg:border-none lg:pt-0"
+          <a
+            href="https://github.com/tusharsadhwani/packaged"
+            class={cn(button.neutral.sm, "w-full md:w-fit")}
           >
-            <a
-              href="https://github.com/tusharsadhwani/packaged"
-              class={cn(button.neutral.sm, "w-full md:w-fit")}
-            >
-              Get Started
-            </a>
-          </div>
+            Get Started
+          </a>
         </div>
       </div>
     </Container>
