Replace textual with posting

--- a/src/components/ExamplesSection.astro
+++ b/src/components/ExamplesSection.astro
@@ -11,6 +11,13 @@ import AppExample from "./AppExample.astro";
     </h2>
   </div>
   <AppExample
+    title="Posting (Terminal based Postman alternative)"
+    imagePath="/posting.png"
+    packageName="posting"
+  >
+    Running <code>posting</code> launches an API testing UI straight in your terminal.
+  </AppExample>
+  <AppExample
     title="Mandelbrot Visualizer"
     imagePath="/mandelbrot.png"
     packageName="mandelbrot"
@@ -33,14 +40,6 @@ import AppExample from "./AppExample.astro";
   >
     <code>pygame</code> ships with various games in its examples folder, one of them
     being <code>aliens</code>.
-  </AppExample>
-  <AppExample
-    title="Textual (TUI app)"
-    imagePath="/textual.png"
-    packageName="textual"
-  >
-    Running <code>python -m textual</code> launches this beautiful TUI demo of one
-    of the best terminal user interfaces I've ever seen.
   </AppExample>
   <AppExample
     title="Minesweeper"
